Arclistview: ensure correct radio button selected after scroll
Issue: https://github.com/Samsung/TAU/issues/458

Problem: old item remains selected and new item loses selection after scrolling

Cause: If selected element goes out of screen, it's removed form DOM tree.
	Let's assume that new element is selected. Then we come back to previous scroll position.
	The removed element is added to tree again. Since it was in selected state,
	latest selected element losses selection and selection is added to old radio button.

Solution: add dummy element to Arclistview widget. Add to it elements that are removed from
	carousel.

--- a/src/css/profile/wearable/changeable/theme-circle/arclistview.less
+++ b/src/css/profile/wearable/changeable/theme-circle/arclistview.less
@@ -128,6 +128,10 @@
 	position: relative !important;
 }
 
+.ui-arc-listview-dummy-element {
+	display: none;
+}
+
 /* Keyboard is visible, screen height is lower then half of screen */
 @media (max-height: 180px) {
 	.ui-arc-listview-carousel li {
